--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,14 @@
 
 html,
 body {
-	margin: 10px 40px 10px;
+	margin: 0px 40px 10px;
+}
+header {
+	margin-top: 2px ;
+	background: lightskyblue;
+	font-size: 13px;
+
+
 }
 
 .container {
