--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ body {
 	margin: 0px 40px 10px;
 }
 header {
-	margin-top: 2px ;
+	margin-top: 2px;
+	width: 2000px;
 	background: lightskyblue;
 	font-size: 13px;
 
